fact section mobile responsive issue fix

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -368,7 +368,7 @@ main .enjoy {
   justify-content: center;
   align-items: center;
   border: 1px solid #ff900e;
-  width: 242px;
+  width: 240px;
   height: 240px;
   text-align: center;
   border-radius: 8px;
@@ -397,7 +397,7 @@ main .enjoy {
     row-gap: 10px;
   }
   .fact-container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 @media screen and (min-width:576px) and (max-width:992px) {
